Fix variable names and upstream

--- a/templates/configmaps/appserver.yaml
+++ b/templates/configmaps/appserver.yaml
@@ -7,6 +7,7 @@ metadata:
     "helm.sh/hook-weight": "1"
 
 data:
+  ENV_EXTENSION: {{ .Values.connections.envExtension | quote }}
   DATABASE_MIGRATION: {{ .Values.connections.mysqlDatabaseMigration | quote }}
   MYSQL_HOST: {{ .Values.connections.mysqlHost }}
   MYSQL_DATABASE: {{ .Values.connections.mysqlDatabase }}
@@ -16,7 +17,6 @@ data:
   APP_CORE_MACHINEKEY: {{ .Values.connections.appCoreMachinekey }}
   DOCUMENT_SERVER_URL_PUBLIC: {{ .Values.connections.DocumentServerUrlPublic | quote }}
   DOCUMENT_SERVER_URL_INTERNAL: {{ .Values.connections.DocumentServerUrlInternal | quote }}
-  DOCUMENT_SERVER_URL_CONVERTER: {{ .Values.connections.DocumentServerUrlConverter | quote }}
   APP_URL_PORTAL: {{ .Values.connections.AppUrlPortal | quote }}
   KAFKA_HOST: {{ .Values.connections.kafkaHost }}
   ELK_HOST: {{ .Values.connections.elkHost }}
