--- a/templates/configmaps/appserver-proxy.yaml
+++ b/templates/configmaps/appserver-proxy.yaml
@@ -6,29 +6,46 @@ data:
   COUNT_WORKER_CONNECTIONS: {{ .Values.connections.countWorkerConnections | quote }}
   NGINX_ENVSUBST_TEMPLATE_SUFFIX: {{ .Values.connections.nginxSnvsubstTemplateSuffix }}
   service_keepalive: {{ .Values.connections.serviceKeepalive | quote }}
-  API_HOST: {{ .Values.connections.apiHost }}
+  SERVICE_API: {{ .Values.connections.apiHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_API_SYSTEM: {{ .Values.connections.apiSystemHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_NOTIFY: {{ .Values.connections.notifyHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_URLSHORTENER: {{ .Values.connections.urlshortenerHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_STUDIO_NOTIFY: {{ .Values.connections.studioNotifyHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_SOCKET: {{ .Values.connections.socketHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_TELEGRAM_SERVICE: {{ .Values.connections.telegramServiceHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_PEOPLE_SERVER: {{ .Values.connections.peopleServerHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_FILES: {{ .Values.connections.filesHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_FILES_SERVICES: {{ .Values.connections.filesServicesHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_STUDIO: {{ .Values.connections.studioHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_BACKUP: {{ .Values.connections.backupHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_SSOAUTH: {{ .Values.connections.ssoauthHost }}:{{ .Values.connections.servicePort }}
+  DOCUMENT_SERVER: {{ .Values.connections.documentServerHost }}
+  SERVICE_PORT: {{ .Values.connections.servicePort | quote }}
+  SERVICE_CLEAR_EVENTS: {{ .Values.connections.clearEventsHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_MIGRATION: {{ .Values.connections.migrationHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_WEBHOOKS_SERVICE: {{ .Values.connections.webhooksServiceHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_DOCEDITOR: {{ .Values.connections.doceditorHost }}:{{ .Values.containerPorts.doceditor }}
+  SERVICE_STORAGE_ENCRYPTION: {{ .Values.connections.storageEncryptionHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_STORAGE_MIGRATION: {{ .Values.connections.storageMigrationHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_NOTIFY: {{ .Values.connections.notifyHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_BACKUP_BACKGRUOND_TASKS: {{ .Values.connections.backupBackgruondTasksHost }}:{{ .Values.containerPorts.backupBackgruondTasks }}
   API_SYSTEM_HOST: {{ .Values.connections.apiSystemHost }}
-  CALENDAR_HOST: {{ .Values.connections.calendarHost }}
-  CRM_HOST: {{ .Values.connections.crmHost }}
+  BACKUP_HOST: {{ .Values.connections.backupHost }}
+  BACKUP_BACKGRUOND_TASKS_HOST: {{ .Values.connections.backupBackgruondTasksHost }}
+  CLEAR_EVENTS_HOST: {{ .Values.connections.clearEventsHost }}
+  MIGRATION_HOST: {{ .Values.connections.migrationHost }}
+  WEBHOOKS_SERVICE_HOST: {{ .Values.connections.webhooksServiceHost }}
   STORAGE_ENCRYPTION_HOST: {{ .Values.connections.storageEncryptionHost }}
-  MAIL_HOST: {{ .Values.connections.mailHost }}
-  STORAGE_MIGRATION_HOST: {{ .Values.connections.storageMigrationHost }}
-  NOTIFY_HOST: {{ .Values.connections.notifyHost }}
-  PROJECTS_SERVER_HOST: {{ .Values.connections.projektsServerHost }}
-  URLSHORTENER_HOST: {{ .Values.connections.urlshortenerHost }}
-  STUDIO_NOTIFY_HOST: {{ .Values.connections.studioNotifyHost }}
-  SOCKET_HOST: {{ .Values.connections.socketHost }}
-  TELEGRAM_SERVICE_HOST: {{ .Values.connections.telegramServiceHost }}
-  PEOPLE_SERVER_HOST: {{ .Values.connections.peopleServerHost }}
   FILES_HOST: {{ .Values.connections.filesHost }}
   FILES_SERVICES_HOST: {{ .Values.connections.filesServicesHost }}
+  STORAGE_MIGRATION_HOST: {{ .Values.connections.storageMigrationHost }}
+  NOTIFY_HOST: {{ .Values.connections.notifyHost }}
+  PEOPLE_SERVER_HOST: {{ .Values.connections.peopleServerHost }}
+  SOCKET_HOST: {{ .Values.connections.socketHost }}
+  STUDIO_NOTIFY_HOST: {{ .Values.connections.studioNotifyHost }}
+  TELEGRAM_SERVICE_HOST: {{ .Values.connections.telegramServiceHost }}
+  URLSHORTENER_HOST: {{ .Values.connections.urlshortenerHost }}
+  API_HOST: {{ .Values.connections.apiHost }}
   STUDIO_HOST: {{ .Values.connections.studioHost }}
-  BACKUP_HOST: {{ .Values.connections.backupHost }}
-  THUMBNAILS_HOST: {{ .Values.connections.thumbnailsHost }}
   SSOAUTH_HOST: {{ .Values.connections.ssoauthHost }}
-  DOCUMENT_SERVER: {{ .Values.connections.documentServer }}
-  SERVICE_PORT: {{ .Values.connections.servicePort | quote }}
-  SERVICE_CLEAR_EVENTS: {{ .Values.connections.clearEvents }}
-  SERVICE_MIGRATION: {{ .Values.connections.migration }}
-  SERVICE_WEBHOOKS_SERVICE: {{ .Values.connections.webhooksService }}
-  SERVICE_DOCEDITOR: {{ .Values.connections.doceditor }}
+  DOCEDITOR_HOST: {{ .Values.connections.doceditorHost }}
