--- a/templates/jobs/pre-upgrade.yaml
+++ b/templates/jobs/pre-upgrade.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: appserver-update
+  name: pre-upgrade
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "3"
@@ -11,7 +11,7 @@ spec:
   template:
     spec:
       containers:
-      - name: appserver-update
+      - name: pre-upgrade
         image: mysql
         env:
         - name: MYSQL_ROOT_PASSWORD
