--- a/templates/pvc/calendar-data.yaml
+++ b/templates/pvc/calendar-data.yaml
@@ -3,6 +3,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: calendar-data
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "2"
 spec:
   storageClassName: {{ .Values.persistence.storageClass }}
   accessModes:
