--- a/templates/pvc/files-data.yaml
+++ b/templates/pvc/files-data.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: files-data
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "2"
 spec:
   storageClassName: {{ .Values.persistence.storageClass }}
   accessModes:
