--- a/templates/configmaps/appserver-proxy.yaml
+++ b/templates/configmaps/appserver-proxy.yaml
@@ -29,6 +29,7 @@ data:
   SERVICE_STORAGE_MIGRATION: {{ .Values.connections.storageMigrationHost }}:{{ .Values.connections.servicePort }}
   SERVICE_NOTIFY: {{ .Values.connections.notifyHost }}:{{ .Values.connections.servicePort }}
   SERVICE_BACKUP_BACKGRUOND_TASKS: {{ .Values.connections.backupBackgruondTasksHost }}:{{ .Values.connections.servicePort }}
+  SERVICE_THUMBNAILS: {{ .Values.connections.thumbnailsHost }}:{{ .Values.connections.servicePort }}
   API_SYSTEM_HOST: {{ .Values.connections.apiSystemHost }}
   BACKUP_HOST: {{ .Values.connections.backupHost }}
   BACKUP_BACKGRUOND_TASKS_HOST: {{ .Values.connections.backupBackgruondTasksHost }}
@@ -49,3 +50,4 @@ data:
   STUDIO_HOST: {{ .Values.connections.studioHost }}
   SSOAUTH_HOST: {{ .Values.connections.ssoauthHost }}
   DOCEDITOR_HOST: {{ .Values.connections.doceditorHost }}
+  THUMBNAILS_HOST: {{ .Values.connections.thumbnailsHost }}
