--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: appserver
-description: Helm chart for installing AppServer in Kubernetes
+name: docspace
+description: Helm chart for installing DocSpace in Kubernetes
 type: application
 version: 0.1.0
 appVersion: 1.1.1
