--- a/templates/jobs/pre-upgrade.yaml
+++ b/templates/jobs/pre-upgrade.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.upgrade.job.enabled }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -10,9 +11,20 @@ spec:
   backoffLimit: 2
   template:
     spec:
-      containers:
+      {{- if .Values.nodeSelector }}
+      nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations: {{ toYaml .Values.tolerations | nindent 8 }}
+      {{- end }}
+      {{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+      - name: {{ .Values.imagePullSecrets }}
+      {{- end }}
+      initContainers:
       - name: pre-upgrade
-        image: mysql
+        image: {{ .Values.upgrade.job.image.repository }}:{{ .Values.upgrade.job.image.tag }}
+        imagePullPolicy: {{ .Values.upgrade.job.image.pullPolicy }}
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
@@ -48,6 +60,31 @@ spec:
           subPath: update.sh
         command: ["/bin/sh", "-c"]
         args: ["/sql/update.sh"]
+      containers:
+      - name: appserver-init-storage
+        image: {{ .Values.images.initContainer.initStorage }}:{{ .Values.images.tag }}
+        imagePullPolicy: IfNotPresent
+        volumeMounts:
+        - name: files-data
+          mountPath: /var/www/products/ASC.Files/server/
+        - name: people-data
+          mountPath: /var/www/products/ASC.People/server/
+        {{- if .Values.onlyofficeCrm.enabled }}
+        - name: crm-data
+          mountPath: /var/www/products/ASC.CRM/server/
+        {{- end }}
+        {{- if .Values.onlyofficeProjectServer.enabled }}
+        - name: project-data
+          mountPath: /var/www/products/ASC.Projects/server/
+        {{- end }}
+        {{- if .Values.onlyofficeCalendar.enabled }}
+        - name: calendar-data
+          mountPath: /var/www/products/ASC.Calendar/server/
+        {{- end }}
+        {{- if .Values.onlyofficeMail.enabled }}
+        - name: mail-data
+          mountPath: /var/www/products/ASC.Mail/server/
+        {{- end }}
       volumes:
       - name: files-data
         persistentVolumeClaim:
@@ -83,3 +120,4 @@ spec:
           name: update-appserver
           defaultMode: 0755
       restartPolicy: Never
+{{- end }}
