--- a/templates/services/onlyoffice-doceditor.yaml
+++ b/templates/services/onlyoffice-doceditor.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.product.name "docspace" }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -15,3 +16,4 @@ spec:
   selector:
     statefulset.kubernetes.io/pod-name: onlyoffice-doceditor-0
   type: ClusterIP
+{{- end }}
