--- a/templates/services/onlyoffice-mail.yaml
+++ b/templates/services/onlyoffice-mail.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.onlyofficeMail.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -10,3 +11,4 @@ spec:
   selector:
     app: onlyoffice-mail
   type: ClusterIP
+{{- end }}
