--- a/templates/statefulset/onlyoffice-webhooks-service.yaml
+++ b/templates/statefulset/onlyoffice-webhooks-service.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.product.name "docspace" }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -154,3 +155,4 @@ spec:
         persistentVolumeClaim:
           claimName: mail-data
       {{- end }}
+{{- end }}
