Add the ability to install appserver (#14)
* Add the ability to install appserver

* Fix job update

--- a/templates/statefulset/onlyoffice-doceditor.yaml
+++ b/templates/statefulset/onlyoffice-doceditor.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.product.name "docspace" }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -76,6 +77,8 @@ spec:
         ports:
         - containerPort: {{ .Values.containerPorts.appserver.http }}
           name: http
+        - containerPort: {{ .Values.containerPorts.doceditor }}
+          name: doceditor
         {{- if .Values.readinessProbe.enabled }}
         readinessProbe: {{- omit .Values.readinessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
@@ -154,3 +157,4 @@ spec:
         persistentVolumeClaim:
           claimName: mail-data
       {{- end }}
+{{- end }}
