--- a/templates/jobs/pre-install.yaml
+++ b/templates/jobs/pre-install.yaml
@@ -1,24 +1,48 @@
+{{- if .Values.install.job.enabled }}
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: appserver-update
+  name: pre-install
   annotations:
-    "helm.sh/hook": pre-upgrade
+    "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "3"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   backoffLimit: 2
   template:
     spec:
-      containers:
-      - name: appserver-update
-        image: mysql
+      {{- if .Values.nodeSelector }}
+      nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations: {{ toYaml .Values.tolerations | nindent 8 }}
+      {{- end }}
+      {{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+      - name: {{ .Values.imagePullSecrets }}
+      {{- end }}
+      initContainers:
+      - name:  migration-runner
+        image: {{ .Values.install.job.image.repository }}:{{ .Values.install.job.image.tag }}
+        imagePullPolicy: {{ .Values.install.job.image.pullPolicy }}
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ template "appserver.mysql.secretName" . }}
               key: {{ .Values.connections.mysqlSecretKeyRootPassword }}
+        - name: MYSQL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "appserver.mysql.secretName" . }}
+              key: {{ .Values.connections.mysqlSecretKeyPassword }}
+        envFrom:
+        - configMapRef:
+            name: appserver-all
+      containers:
+      - name: appserver-init-storage
+        image: {{ .Values.images.initContainer.initStorage }}:{{ .Values.images.tag }}
+        imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: files-data
           mountPath: /var/www/products/ASC.Files/server/
@@ -40,14 +64,6 @@ spec:
         - name: mail-data
           mountPath: /var/www/products/ASC.Mail/server/
         {{- end }}
-#        - name: change-db-scripts
-#          mountPath: /sql/changedb.sql
-#          subPath: changedb.sql
-        - name: update-scripts
-          mountPath: /sql/update.sh
-          subPath: update.sh
-        command: ["/bin/sh", "-c"]
-        args: ["/sql/update.sh"]
       volumes:
       - name: files-data
         persistentVolumeClaim:
@@ -75,11 +91,5 @@ spec:
         persistentVolumeClaim:
           claimName: mail-data
       {{- end }}
-#      - name: change-db-scripts
-#        configMap:
-#          name: change-db-scripts
-      - name: update-scripts
-        configMap:
-          name: update-appserver
-          defaultMode: 0755
       restartPolicy: Never
+{{- end }}
