--- a/templates/jobs/pre-install.yaml
+++ b/templates/jobs/pre-install.yaml
@@ -11,6 +11,9 @@ spec:
   backoffLimit: 2
   template:
     spec:
+      {{- if .Values.podSecurityContext.enabled }}
+      securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
+      {{- end }}
       {{- if .Values.nodeSelector }}
       nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
       {{- end }}
@@ -25,6 +28,7 @@ spec:
       - name:  migration-runner
         image: {{ .Values.install.job.image.repository }}:{{ .Values.install.job.image.tag }}
         imagePullPolicy: {{ .Values.install.job.image.pullPolicy }}
+        resources: {{- toYaml .Values.resources | nindent 10 }}
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
@@ -43,6 +47,7 @@ spec:
       - name: appserver-init-storage
         image: {{ .Values.images.initContainer.initStorage }}:{{ .Values.images.tag }}
         imagePullPolicy: IfNotPresent
+        resources: {{- toYaml .Values.resources | nindent 10 }}
         volumeMounts:
         - name: files-data
           mountPath: /var/www/products/ASC.Files/server/
